# pdfarranger

./: .coveragerc  .gitignore  .prospector.yaml  AUTHORS  ChangeLog  README  README.md  TESTING.md  TODO  Win32.md  flatpak.json  flatpak.yaml  macOS.md  pdfarranger.spec  pdfshuffler  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_win32.py  snapcraft.yaml  test.py
data/: README  com.github.jeromerobert.pdfarranger.desktop  com.github.jeromerobert.pdfarranger.metainfo.xml  menu.ui  menu.ui.h  pdfarranger.appdata.xml  pdfarranger.desktop  pdfarranger.ui  pdfarranger.ui.h  pdfshuffler.appdata.xml  pdfshuffler.desktop  pdfshuffler.ui  pdfshuffler.ui.h  pdfshuffler_menu.ui  preferences.ui  querysavedialog.ui
debian/: changelog  control  copyright  docs  manpages  menu  pdfshuffler.desktop  watch
doc/: pdfarranger.1  pdfshuffler.1
pdfarranger/: __main__.py  config.py  constants.py  core.py  croputils.py  date_parser.py  dialogs.py  exporter.py  exporter_outlines.py  iconview.py  image_exporter.py  metadata.py  pageutils.py  pdfarranger.py  place.py  search.py  splitter.py  undo.py
pdfshuffler/: cairorendering.py  pdfshuffler.py  pdfshuffler_iconview.py
po/: POTFILES.in  ar.po  ca.po  ca@valencia.po  cleanuppo.sh  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  generate_po.sh  genpot.sh  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  ko.po  nl.po  oc.po  pdfarranger.pot  pdfshuffler.pot  pl_PL.po  pt_BR.po  pt_PT.po  ru.po  sl.po  sv.po  tr.po  uk.po  updatepo.sh  vi.po  zh_CN.po  zh_TW.po
tests/: test.py  test_core.py  test_date_parser.py  test_exporter.py  (+1 more)
(+9 files in other folders)
