[build-system]
requires = ["setuptools>=61.2", "setuptools-gettext"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfarranger"
version = "1.12.1"
authors = [{name = "PDF Arranger contributors"}]
license = "GPL-3.0-or-later"
#description = "A simple application for PDF Merging, Rearranging, and Splitting"
description = "PDF Arranger"
dependencies = [
    "pikepdf>=6",
    "python-dateutil>=2.4.0",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/pdfarranger/pdfarranger"

[project.optional-dependencies]
image = ["img2pdf>=0.3.4"]

[project.scripts]
pdfarranger = "pdfarranger.pdfarranger:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfarranger*"]
